# pidgin-protocol-status-icons

./: .bzrignore  .gitignore  AUTHORS.md  CHANGES.md  ChangeLog  Makefile.am  Makefile.am.in  Makefile.in  Makefile.mingw  README  README.linux_binary  README.md  README.win32  VERSION  build-debian-package.sh  build-icon-theme.sh  build-linux-x86-package.sh  build-win32-package.sh  config.h.mingw  configure  configure.ac.in  configure.in  install_linux_package.sh
.tx/: config
autom4te.cache/: output.0  requests  traces.0
debian/: README.Debian  changelog.in  control  copyright.in  rules
default-theme/: generate.sh
default-theme/protocol-status-theme/purple/status-icon/: theme.xml
po/: Makefile.mingw  POTFILES.in  de.po  el.po  pidgin-protocol-status-icons.pot  pl.po  ru.po  sk.po
scripts/: gen-configure_ac.sh  gen-mingw-dist.sh
share/: Makefile.am  Makefile.in
share/pixmaps/: Makefile.am  Makefile.in
share/pixmaps/default/: Makefile.am  Makefile.in  generate-default-theme.sh  theme.xml
src/: Makefile.am  Makefile.in  Makefile.mingw  gtkblist-modifier.c  gtkblist-modifier.h  icons.c  icons.h  internal.h  pidgin-protocol-status-icons.c  plugin.c
