defaultdir = $(datadir)/pixmaps/pidgin/pidgin-protocol-status-icons/default

default_DATA = \
	simple/away.png \
	simple/chat.png \
	simple/offline.png \
	simple/extended-away.png \
	simple/busy.png \
	simple/available.png \
	simple/invisible.png \
	meanwhile/away.png \
	meanwhile/chat.png \
	meanwhile/offline.png \
	meanwhile/extended-away.png \
	meanwhile/busy.png \
	meanwhile/available.png \
	meanwhile/invisible.png \
	irc/away.png \
	irc/chat.png \
	irc/offline.png \
	irc/extended-away.png \
	irc/busy.png \
	irc/available.png \
	irc/invisible.png \
	msn/away.png \
	msn/chat.png \
	msn/offline.png \
	msn/extended-away.png \
	msn/busy.png \
	msn/available.png \
	msn/invisible.png \
	silc/away.png \
	silc/chat.png \
	silc/offline.png \
	silc/extended-away.png \
	silc/busy.png \
	silc/available.png \
	silc/invisible.png \
	aim/away.png \
	aim/chat.png \
	aim/offline.png \
	aim/extended-away.png \
	aim/busy.png \
	aim/available.png \
	aim/invisible.png \
	icq/away.png \
	icq/chat.png \
	icq/offline.png \
	icq/extended-away.png \
	icq/busy.png \
	icq/available.png \
	icq/invisible.png \
	qq/away.png \
	qq/chat.png \
	qq/offline.png \
	qq/extended-away.png \
	qq/busy.png \
	qq/available.png \
	qq/invisible.png \
	yahoo/away.png \
	yahoo/chat.png \
	yahoo/offline.png \
	yahoo/extended-away.png \
	yahoo/busy.png \
	yahoo/available.png \
	yahoo/invisible.png \
	bonjour/away.png \
	bonjour/chat.png \
	bonjour/offline.png \
	bonjour/extended-away.png \
	bonjour/busy.png \
	bonjour/available.png \
	bonjour/invisible.png \
	zephyr/away.png \
	zephyr/chat.png \
	zephyr/offline.png \
	zephyr/extended-away.png \
	zephyr/busy.png \
	zephyr/available.png \
	zephyr/invisible.png \
	novell/away.png \
	novell/chat.png \
	novell/offline.png \
	novell/extended-away.png \
	novell/busy.png \
	novell/available.png \
	novell/invisible.png \
	gadu-gadu/away.png \
	gadu-gadu/chat.png \
	gadu-gadu/offline.png \
	gadu-gadu/extended-away.png \
	gadu-gadu/busy.png \
	gadu-gadu/available.png \
	gadu-gadu/invisible.png \
	jabber/away.png \
	jabber/chat.png \
	jabber/offline.png \
	jabber/extended-away.png \
	jabber/busy.png \
	jabber/available.png \
	jabber/invisible.png \
	theme.xml

EXTRA_DIST = $(default_DATA)